--- a/mode-settings/consult-embark-marginalia-settings.org
+++ b/mode-settings/consult-embark-marginalia-settings.org
@@ -11,7 +11,7 @@
  :demand t
  :bind
  (("C-." . embark-act) ;; pick some comfortable binding
-  ("C-;" . embark-dwim) ;; good alternative: M-.
+  ;; ("C-;" . embark-dwim) ;; good alternative: M-.
   ("C-h B" . embark-bindings)) ;; alternative for `describe-bindings'
 
  :init
