--- a/mode-settings/global-settings.org
+++ b/mode-settings/global-settings.org
@@ -341,9 +341,9 @@
 #+begin_src emacs-lisp :load yes
 ; disable electric indent
 (electric-indent-mode 0)
-(use-package
- aggressive-indent
- :config (aggressive-indent-global-mode nil))
+;; (use-package
+;;  aggressive-indent
+;;  :config (aggressive-indent-global-mode nil))
 #+end_src
 
 ** Autoformatting
