--- a/mode-settings/tree-sitter-settings.org
+++ b/mode-settings/tree-sitter-settings.org
@@ -8,10 +8,9 @@ This is the old way of using ~tree-sitter~ in emacs. In emacs 29, this moved to 
  :hook ((tree-sitter-after-on-hook . tree-sitter-hl-mode)))
 
 (use-package tree-sitter-langs)
-
 #+END_SRC
 ** Combobulate
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :load yes
 (use-package
  combobulate
  :straight '(combobulate :type git :host github :repo "mickeynp/combobulate")
@@ -32,21 +31,25 @@ This is the old way of using ~tree-sitter~ in emacs. In emacs 29, this moved to 
 #+end_src
 ** Treesit
 #+begin_src emacs-lisp :load yes
-(use-package
- treesit-auto
- :straight '(treesit-auto :type git :host github :repo "renzmann/treesit-auto")
- :demand t
- :config
- (setq treesit-auto-install 't)
- (setq treesit-auto-opt-out-list '(protobuf))
- (global-treesit-auto-mode)
- (treesit-auto-install-all)
-
- ;; Set up treesit mode hooks for relevant modes
- (setq python-ts-mode-hook python-mode-hook)
- (setq yaml-ts-mode-hook yaml-mode-hook)
- (setq json-ts-mode-hook json-mode-hook)
- (setq js-ts-mode-hook js-mode-hook)
- (setq markdown-ts-mode-hook markdown-mode-hook)
- (setq bash-ts-mode-hook sh-mode-hook))
+  (use-package
+   treesit-auto
+   :straight
+   '(treesit-auto
+     :type git
+     :host github
+     :repo "renzmann/treesit-auto"
+     )
+   :demand t
+   :config
+   (setq treesit-auto-install 't)
+   (setq treesit-auto-opt-out-list '(protobuf))
+   (global-treesit-auto-mode)
+   (treesit-auto-install-all)
+   ;; set up treesit mode hooks for relevant modes
+   (setq python-ts-mode-hook python-mode-hook)
+   (setq yaml-ts-mode-hook yaml-mode-hook)
+   (setq json-ts-mode-hook json-mode-hook)
+   ;; (setq js-ts-mode-hook js-mode-hook)
+   (setq markdown-ts-mode-hook markdown-mode-hook)
+   (setq bash-ts-mode-hook sh-mode-hook))
 #+END_SRC
