--- a/mode-settings/projectile-settings.org
+++ b/mode-settings/projectile-settings.org
@@ -34,5 +34,9 @@
  (add-to-list 'projectile-globally-ignored-directories "/.dvc/tmp")
  (add-to-list
   'projectile-globally-ignored-directories "/.jekyll-cache")
- (projectile-mode +1))
+ (projectile-mode +1)
+ ;; (add-hook 'magit-run-section-hook 'projectile-invalidate-cache)
+ (add-hook
+  'magit-section-post-command-hook 'projectile-invalidate-cache)
+)
 #+END_SRC
