--- a/mode-settings/copilot-settings.org
+++ b/mode-settings/copilot-settings.org
@@ -1,4 +1,5 @@
-* Github Copilot
+* Large Language Models in Emacs
+** Github Copilot
 #+begin_src emacs-lisp
 (use-package
  copilot
@@ -10,12 +11,34 @@
  :hook (yaml-mode . copilot-mode)
  :ensure t)
 #+end_src
-* C3PO
+** C3PO
+This one didn't work very well
 #+begin_src emacs-lisp :load no
 (use-package
  c3po
  :straight (:host github :repo "d1egoaz/c3po.el")
  :config
- (setq c3po-api-key
-       (f-read-text (expand-file-name "~/.openai/api_key.txt"))))
+ (setq chat-api-key
+       (f-read-text (expand-file-name "~/.openai/emacs-key.txt"))))
+#+end_src
+** OpenAI
+#+begin_src emacs-lisp :load yes
+(use-package
+ openai
+ :straight (openai :type git :host github :repo "emacs-openai/openai")
+ :init
+ (setq openai-key
+       (f-read-text (expand-file-name "~/.openai/emacs-key.txt"))))
+(use-package
+ chatgpt
+ :straight
+ (chatgpt :type git :host github :repo "emacs-openai/chatgpt"))
+(use-package
+ codegpt
+ :straight
+ (codegpt :type git :host github :repo "emacs-openai/codegpt"))
+(use-package
+ dall-e
+ :straight
+ (dall-e :type git :host github :repo "emacs-openai/dall-e"))
 #+end_src
