don't wrap words in org (will need a better long term solution)

--- a/mode-settings/org-settings.org
+++ b/mode-settings/org-settings.org
@@ -84,7 +84,7 @@
 (use-package org-bullets :after org)
 
 ;;nil means to wrap lines in org mode
-(setq org-startup-truncated t)
+(setq org-startup-truncated nil)
 #+end_src
 
 ** Org Modern
