--- a/mode-settings/term-settings.org
+++ b/mode-settings/term-settings.org
@@ -109,6 +109,6 @@ BUFFER may be either a buffer or its name (a string)."
     ;;(display-buffer-reuse-window display-buffer-in-direction)
     ;;display-buffer-in-direction/direction/dedicated is added in emacs27
     ;;(direction . bottom)
-    ;; (dedicated . t) ;dedicated is supported in emacs27
+    (dedicated . t) ;dedicated is supported in emacs27
     (reusable-frames . visible) (window-height . 0.3))))
 #+END_SRC
